--- a/home/templates/home/welcome_page.html
+++ b/home/templates/home/welcome_page.html
@@ -1,6 +1,6 @@
 {% load i18n wagtailcore_tags %}
 
-<section id="main" class="wrapper">
+<main id="main" class="wrapper">
     <div class="inner">
 
         <!-- Content Header -->
@@ -58,4 +58,4 @@
         </div>
 
     </div>
-</section>
+</main>
