--- a/templates/debug/theme-sidebar.html
+++ b/templates/debug/theme-sidebar.html
@@ -5,33 +5,70 @@
         <h3>About This Section</h3>
         <p>This is an example of content that has CTAs, but no links from the header or the image.</p>
         <p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
-        <footer>
-            <ul class="actions">
-                <li><a href="#" class="button small">Action 1</a></li>
-                <li><a href="#" class="button small">Action 2</a></li>
-            </ul>
-        </footer>
+    </section>
+    <hr />
+    <section>
+        <span class="image fit"><img src="{% static 'images/sample03-551x297.jpg' %}" alt="Lorem ipsum" /></span>
+        <h3>Tag cloud</h3>
+        <p>Click on a topic tag below to view a list of related content:</p>
+        <div>
+            <a class="tags" href="#">tagOne</a> <a class="tags" href="#">tagTwo</a> <a class="tags" href="#">tagThree</a> <a class="tags" href="#">tagFour</a>
+            <a class="tags" href="#">tagFive</a> <a class="tags" href="#">tagSix</a> <a class="tags" href="#">tagSeven</a> <a class="tags" href="#">tagEight</a>
+            <a class="tags" href="#">tagNine</a> <a class="tags" href="#">tagTen</a> <a class="tags" href="#">tagEleven</a> <a class="tags" href="#">tagTwelve</a>
+            <a class="tags" href="#">tagThirteen</a> <a class="tags" href="#">tagFourteen</a>
+        </div>
     </section>
     <hr />
     <section>
         <a href="#" class="image fit"><img src="{% static 'images/sample03-551x297.jpg' %}" alt="Lorem ipsum" /></a>
         <a href="#"><h3>Example with Linked Image</h3></a>
         <p>This is an example has a linked image, header, and button. This would normally be used links to special content, etc. that we want to highlight.</p>
-        <footer>
-            <ul class="actions">
-                <li><a href="#" class="button small">Learn More</a></li>
-            </ul>
-        </footer>
+        <ul class="actions">
+            <li><a href="#" class="button tiny">More</a></li>
+        </ul>
     </section>
     <hr />
     <section>
         <a href="#" class="image fit"><img src="{% static 'images/sample04-551x297.jpg' %}" alt="Lorem ipsum" /></a>
         <h3>Amet Lorem Tempus</h3>
         <p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-        <footer>
-            <ul class="actions">
-                <li><a href="#" class="button small">Learn More</a></li>
-            </ul>
-        </footer>
+        <ul class="actions">
+            <li><a href="#" class="button tiny">Action 1</a></li>
+            <li><a href="#" class="button tiny">Action 2</a></li>
+        </ul>
+    </section>
+    <hr />
+    <section>
+        <h3>Related content</h3>
+        <article class="mini-tile">
+            <a href="#" class="image"><img src="{% static 'images/blank-90x90.jpg' %}" alt="Lorem ipsum" /></a>
+            <div class="related">
+                <h4><a href="#">Article Title</a></h4>
+                <p>This is an example of a related article that would be linked to the main content.</p>
+                <ul class="actions">
+                    <li><a href="#" class="button tiny">More</a></li>
+                </ul>
+            </div>
+        </article>
+        <article class="mini-tile">
+            <a href="#" class="image"><img src="{% static 'images/blank-90x90.jpg' %}" alt="Lorem ipsum" /></a>
+            <div class="related">
+                <h4><a href="#">Article Title</a></h4>
+                <p>This is an example of a related article that would be linked to the main content.</p>
+                <ul class="actions">
+                    <li><a href="#" class="button tiny">More</a></li>
+                </ul>
+            </div>
+        </article>
+        <article class="mini-tile">
+            <a href="#" class="image"><img src="{% static 'images/blank-90x90.jpg' %}" alt="Lorem ipsum" /></a>
+            <div class="related">
+                <h4><a href="#">Article Title</a></h4>
+                <p>This is an example of a related article that would be linked to the main content.</p>
+                <ul class="actions">
+                    <li><a href="#" class="button tiny">More</a></li>
+                </ul>
+            </div>
+        </article>
     </section>
 </div>
