--- a/CMR/static/assets/css/main.css
+++ b/CMR/static/assets/css/main.css
@@ -1,4 +1,4 @@
-@import url(fontawesome-all.min.css);
+/* @import url(fontawesome-all.min.css); */
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600|Raleway:500,700,800");
 
 /*
@@ -20,7 +20,7 @@ form, label, legend, table, caption, tbody,
 tfoot, thead, tr, th, td, article, aside,
 canvas, details, embed, figure, figcaption,
 footer, header, hgroup, menu, nav, output, ruby,
-section, summary, time, mark, audio, video {
+section, summary, time, mark, audio, video, main {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -199,34 +199,34 @@ input, select, textarea {
 				display: none;
 			}
 
-	h2 {
+	h1, h2 {
 		font-size: 1.25em;
-		line-height: 1.25em;
+		line-height: 1.5em;
 	}
 
 	h3 {
-		font-size: 1em;
-		line-height: 1.5em;
+		font-size: 1.1em;
+		line-height: 1.25em;
 	}
 
 	h4 {
-		font-size: 1.1em;
-		line-height: 1.5em;
+		font-size: 1em;
+		line-height: 1.25em;
 	}
 
 	h5 {
 		font-size: 0.9em;
-		line-height: 1.5em;
+		line-height: 1.25em;
 	}
 
 	h6 {
-		font-size: 0.7em;
-		line-height: 1.5em;
+		font-size: 0.8em;
+		line-height: 1.25em;
 	}
 
 	@media screen and (max-width: 736px) {
 
-		h2 {
+		h1, h2 {
 			line-height: 1.5em;
 		}
 
@@ -1815,6 +1815,195 @@ input, select, textarea {
 		border-color: #e6e6e6;
 	}
 
+/* [ML] Gallery */
+	.gallery.box {
+		margin-top: 2em;
+	}
+
+	/* Modal (background) */
+	.gallery.modal {
+		display: none;
+		position: fixed;
+		z-index: 1;
+		padding-top: 100px;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		overflow: auto;
+		background-color: black;
+	}
+	.cursor {
+		cursor: pointer;
+	}
+
+
+  	/* Modal Content */
+  	.gallery.modal .content {
+		position: relative;
+		background-color: black;
+		margin: auto;
+		padding: 0;
+		width: 90%;
+		max-width: 1200px;
+  	}
+
+  	/* Modal Close Button */
+	.gallery.modal .close {
+		color: #f6f6f6;
+		position: absolute;
+		top: 4.5em;
+		right: 3.5em;
+		text-align: right;
+		text-transform: uppercase;
+		text-decoration: none;
+		font-size: 1em;
+		margin: 0;
+		padding: 0;
+		font-weight: 800;
+	}
+
+	.gallery.modal .close:hover,
+	.gallery.modal .close:focus {
+		color: #999;
+		cursor: pointer;
+	}
+
+	.thumbnails.row,
+	.thumbnails.row .col {
+		background-color: black;
+		margin: 0;
+		padding: 0;
+	}
+
+	.thumbnails.row:after {
+		content: "";
+		display: table;
+		clear: both;
+	}
+
+	.thumbnails.row .col {
+		float: left;
+		width: 20%;
+	}
+
+	/* Hide the slides by default */
+	.gallerySlide {
+		display: none;
+	}
+	.gallerySlide img {
+		width: 100%;
+		border: solid 2px black;
+	}
+
+	/* Next & previous buttons */
+	.gallery.modal a.prev,
+	.gallery.modal a.next {
+		cursor: pointer;
+		position: absolute;
+		top: 50%;
+		width: auto;
+		padding: 16px;
+		margin-top: -15%;
+		color: #f6f6f6;
+		font-weight: 800;
+		font-size: 2em;
+		transition: 0.6s ease;
+		user-select: none;
+		-webkit-user-select: none;
+		text-decoration: none;
+		border: none;
+		background-color: rgba(0, 0, 0, 0.2);
+	}
+	.gallery.modal a.next {
+		right: 0;
+	}
+
+	.gallery.modal a.prev:hover,
+	.gallery.modal a.next:hover {
+		background-color: rgba(0, 0, 0, 0.8);
+	}
+
+	/* Number text (1/3 etc) */
+	.gallerySlide .slidenum {
+		color: #f6f6f6;
+		background-color: rgba(0, 0, 0, 0.2);
+		font-size: 1em;
+		padding: .25em .5em;
+		position: absolute;
+		top: 0;
+	}
+
+	.gallerySlide img {
+		width: 100%;
+	}
+
+	/* Caption text */
+	.gallery.modal .caption {
+		width: 100%;
+		background-color: black;
+		margin: 0 0 0 0;
+		padding: 0 0 0 0;
+		color: #f6f6f6;
+	}
+	.gallery.modal .caption:after {
+		content: "";
+		display: table;
+		clear: both;
+	}
+
+	#gallerySlideCredits {
+		float: right;
+		width: 30%;
+		margin: 0 0 1em 0;
+		padding: 0 0 0 0;
+		color: #bbb;
+		font-size: 0.7em;
+		line-height: 1em;
+		text-transform: uppercase;
+		text-align: right;
+		text-wrap: wrap;
+	}
+	#gallerySlideCaption {
+		float: left;
+		width: 69%;
+		margin: 0 0 2em 0;
+		padding: 0 0 0 0;
+		color: #f6f6f6;
+		font-size: 1em;
+		line-height: 1.25em;
+		text-align: left;
+		text-wrap: wrap;
+	}
+
+	span.galleryCredits,
+	span.galleryCaption {
+		display: none;
+		margin: 0;
+		padding: 0;
+	}
+
+	img.galleryThumb {
+		opacity: 0.6;
+		margin: 0;
+		padding: 0;
+		width: 100%;
+		border: solid 2px black;
+	}
+
+	.active,
+	.galleryThumb:hover {
+		opacity: 1;
+	}
+
+	img.hover-shadow {
+		transition: 0.3s;
+	}
+
+	img.hover-shadow:hover {
+		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	}
+
 /* Button */
 
 	input[type="submit"],
@@ -1876,6 +2065,18 @@ input, select, textarea {
 		.button.small {
 			font-size: 0.8em;
 		}
+
+		/* -- [ML] Custom -- */
+		input[type="submit"].tiny,
+		input[type="reset"].tiny,
+		input[type="button"].tiny,
+		button.tiny,
+		.button.tiny {
+			font-weight: 600;
+			padding: 0 1em;
+			font-size: 0.6em;
+		}
+		/* -- END -- */
 
 		input[type="submit"].large,
 		input[type="reset"].large,
@@ -2471,6 +2672,15 @@ input, select, textarea {
 				width: 100%;
 			}
 
+		.image-credits {
+			margin: -2em 0 2em 0;
+			font-size: 0.7em;
+			line-height: 1em;
+			text-transform: uppercase;
+			text-align: right;
+			display: block;
+		}
+
 		.image.main {
 			display: block;
 			margin: 0 0 3em 0;
@@ -2547,7 +2757,6 @@ input, select, textarea {
 	}
 
 /* Actions */
-
 	ul.actions {
 		display: -moz-flex;
 		display: -webkit-flex;
@@ -2792,6 +3001,7 @@ input, select, textarea {
 	ul.pagination {
 		cursor: default;
 		list-style: none;
+		margin: 0 0 .75em 0;
 		padding-left: 0;
 	}
 
@@ -2975,6 +3185,7 @@ input, select, textarea {
 			margin-bottom: 0;
 		}
 
+		header.major h1,
 		header.major h2 {
 			font-size: 2.25em;
 			font-weight: 800;
@@ -2982,22 +3193,40 @@ input, select, textarea {
 			padding-bottom: 0.75em;
 		}
 
-		header.major p.metadata {
-			color: #999;
-			font-size: 0.9em;
-			margin: 0 0 1.5em 0;
-		}
-		header.major p.metadata .icon {
-			margin-right: .5em;
-		}
-
 		@media screen and (max-width: 1280px) {
 
+			header.major h1,
 			header.major h2 {
 				font-size: 1.25em;
 			}
 
 		}
+
+/* [ML] Content Metadata */
+	.content.list div.metadata,
+	.spotlight div.metadata,
+	.major div.metadata {
+		color: #757575;
+		font-size: 0.8em;
+		line-height: 1em;
+		margin: -0.7em 0 1.5em 0;
+	}
+	.content.list div.metadata .icon,
+	.spotlight div.metadata .icon,
+	.major div.metadata .icon {
+		margin-right: .5em;
+	}
+
+	.tags {
+		margin-left: 0;
+		margin-right: .5em;
+		color: #757575;
+	}
+
+	.date {
+		text-transform: uppercase;
+		color: #757575;
+	}
 
 /* [ML] Content Tiles */
 	.content.tile h3 {
@@ -3008,9 +3237,57 @@ input, select, textarea {
 		margin: 0 0 1.5em 0;
 	}
 	.content.tile .image {
-		float: right;
 		margin: 0 0 .5em 1em;
 		top: 0.25em;
+	}
+
+	.sidebar p {
+		margin: 0 0 0.5em 0;
+	}
+
+	.mini-tile {
+		margin: 0 0 2em 0;
+	}
+
+	.mini-tile a {
+		text-decoration: none;
+	}
+
+	.mini-tile .image {
+		margin: 0 .5em 0 0;
+		display: inline-block;
+		vertical-align: top;
+	}
+	.mini-tile .related {
+		display: inline-block;
+		width: 66%;
+		margin: 0;
+		padding: 0;
+	}
+	.mini-tile .related h4 {
+		margin: 0 0 .5em 0;
+		padding: 0;
+		text-decoration: none;
+	}
+	.mini-tile .related h4:after {
+		border-bottom: 0;
+		display: none;
+		text-decoration: none;
+	}
+	.mini-tile .related p {
+		margin: 0 0 .5em 0;
+		padding: 0;
+	}
+	.mini-tile .related ul.actions {
+		margin: 0;
+		padding: 0;
+		width: 100%;
+	}
+	.mini-tile .related ul.actions li {
+		margin: 0;
+		padding: 0;
+		width: 100%;
+		text-align: right;
 	}
 
 /* Spotlight */
@@ -3170,7 +3447,8 @@ input, select, textarea {
 /* Wrapper */
 
 	.wrapper {
-		padding: 4em 0 2em 0 ;
+		/* padding: 4em 0 2em 0 ; */
+		padding: 2.5em 0 2em 0 ;
 		position: relative;
 	}
 
@@ -4254,6 +4532,7 @@ input, select, textarea {
 
 /* Banner */
 
+	.static_banner,
 	#banner {
 		background-color: #444;
 		color: #fff;
@@ -4537,7 +4816,7 @@ input, select, textarea {
 		}
 
 		#footer .copyright {
-			color: #bbb;
+			color: #757575;
 			font-size: 0.9em;
 		}
 
@@ -4550,7 +4829,7 @@ input, select, textarea {
 		}
 
 			#footer .menu a {
-				color: inherit;
+				color: #757575;
 			}
 
 		@media screen and (max-width: 1280px) {
