--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -10,43 +10,44 @@
 	</header>
 
 	<!-- Banner -->
-	{% if page.show_slides %}
 	{% include "includes/banner-slides.html" %}
-	{% endif %}
 
-	<!-- Promoted Content -->
-	{% if page.show_promo %}
-	{% include "includes/promo.html" %}
-	{% endif %}
-
-	<!-- Happening - Events, Shows, Calendar -->
-	{% if page.show_happening %}
-	<section id="two" class="wrapper content-pad">
-		<div class="inner">
-			<div class="features {% if page.show_newsletter %}three{% else %}two{% endif %}">
-				{% include "includes/event-tiles.html" %}
-				{% if page.show_newsletter %}
-				{% include "includes/newsletter-tile.html" %}
-				{% endif %}
+	<main>
+		<!-- Promoted Content -->
+		<section id="one" class="wrapper major-pad">
+			<div class="inner">
+				{% include "includes/promo.html" %}
 			</div>
-		</div>
-	</section>
-	{% endif %}
+		</section>
 
-	<!-- Recent Content -->
-	{% if page.show_recent %}
-	<section id="three" class="wrapper style2">
-		<div class="inner">
-			<h2>{% if header_recent %}{{ header_recent }}{% else %}Recent Posts{% endif %}</h2>
-			<div class="posts">
+		<!-- Happening - Events, Shows, Calendar -->
+		{% if self.show_happening %}
+		<section id="two" class="wrapper content-pad">
+			<div class="inner">
+				<div class="features {% if self.show_newsletter %}three{% else %}two{% endif %}">
+					{% include "includes/event-tiles.html" %}
+					{% if self.show_newsletter %}
+					{% include "includes/newsletter-tile.html" %}
+					{% endif %}
+				</div>
+			</div>
+		</section>
+		{% endif %}
+
+		<!-- Recent Content -->
+		{% if self.show_recent %}
+		<section id="three" class="wrapper style2">
+			<div class="inner">
+				<h2>{% if header_recent %}{{ header_recent }}{% else %}Recent Posts{% endif %}</h2>
 				{% include "includes/recent.html" %}
+				{% include "includes/pagination.html" %}
 			</div>
-		</div>
-	</section>
-	{% endif %}
+		</section>
+		{% endif %}
 
-	<!-- Contact -->
-	{% if page.show_contact_info %}
-	{% include "includes/contact.html" %}
-	{% endif %}
+		<!-- Contact -->
+		{% if self.show_contact_info %}
+		{% include "includes/contact.html" %}
+		{% endif %}
+	</main>
 {% endblock %}
