--- a/templates/debug/theme-blog-main.html
+++ b/templates/debug/theme-blog-main.html
@@ -12,8 +12,8 @@
 	<head>
 		<title>DEBUG - Blog Main</title>
 		<meta charset="utf-8" />
-        {% if page.search_description %}
-        <meta name="description" content="{{ page.search_description }}" />
+        {% if self.search_description %}
+        <meta name="description" content="{{ self.search_description }}" />
         {% endif %}
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
@@ -22,6 +22,7 @@
         <base target="_blank">
         {% endif %}
 
+        <link rel="stylesheet" type="text/css" href="{% static 'assets/css/fontawesome-all.min.css' %}" />
         <link rel="stylesheet" type="text/css" href="{% static 'assets/css/main.css' %}" />
 		<noscript>
 			<link rel="stylesheet" type="text/css" href="{% static 'assets/css/noscript.css' %}" />
@@ -46,23 +47,16 @@
 
 				<!-- Content -->
 				<div class="content">
-					<!-- Happening - Events, Shows, Calendar -->
-					<section id="two" class="wrapper content-pad">
-						<div class="inner">
-							<div class="features two">
-								{% include "debug/theme-event-tiles.html" %}
-							</div>
-						</div>
-					</section>
+					<!-- Promoted Content -->
+					{% include "debug/theme-promo.html" %}
 
 					<!-- Recent Content -->
-					{% if page.show_recent or True %}
+					{% if self.show_recent or True %}
 					<section id="three" class="wrapper style2">
 						<div class="inner">
 							<h2>Recent Posts</h2>
-							<div class="posts">
-								{% include "debug/theme-recent.html" %}
-							</div>
+							{% include "debug/theme-recent.html" %}
+							{% include "debug/theme-pagination.html" %}
 						</div>
 					</section>
 					{% endif %}
@@ -75,7 +69,7 @@
 		</section>
 
 		<!-- Contact -->
-		{% if page.show_contact or False %}
+		{% if self.show_contact or False %}
 		{% include "debug/theme-contact.html" %}
 		{% endif %}
 
