--- a/templates/debug/theme-home.html
+++ b/templates/debug/theme-home.html
@@ -22,6 +22,7 @@
         <base target="_blank">
         {% endif %}
 
+        <link rel="stylesheet" type="text/css" href="{% static 'assets/css/fontawesome-all.min.css' %}" />
         <link rel="stylesheet" type="text/css" href="{% static 'assets/css/main.css' %}" />
 		<noscript>
 			<link rel="stylesheet" type="text/css" href="{% static 'assets/css/noscript.css' %}" />
@@ -40,31 +41,36 @@
 		<!-- Banner -->
 		{% include "debug/theme-banner-slides.html" %}
 
-		<!-- Promoted Content -->
-		{% include "debug/theme-promo.html" %}
-
-		<!-- Happening - Events, Shows, Calendar -->
-		<section id="two" class="wrapper content-pad">
-			<div class="inner">
-				<div class="features three">
-					{% include "debug/theme-event-tiles.html" %}
-					{% include "debug/theme-newsletter-tile.html" %}
+		<main>
+			<!-- Promoted Content -->
+			<section id="one" class="wrapper major-pad">
+				<div class="inner">
+					{% include "debug/theme-promo.html" %}
 				</div>
-			</div>
-		</section>
+			</section>
 
-		<!-- Recent Content -->
-		<section id="three" class="wrapper style2">
-			<div class="inner">
-				<h2>Recent Posts</h2>
-				<div class="posts">
+			<!-- Happening - Events, Shows, Calendar -->
+			<section id="two" class="wrapper content-pad">
+				<div class="inner">
+					<div class="features three">
+						{% include "debug/theme-event-tiles.html" %}
+						{% include "debug/theme-newsletter-tile.html" %}
+					</div>
+				</div>
+			</section>
+
+			<!-- Recent Content -->
+			<section id="three" class="wrapper style2">
+				<div class="inner">
+					<h2>Recent Posts</h2>
 					{% include "debug/theme-recent.html" %}
+					{% include "debug/theme-pagination.html" %}
 				</div>
-			</div>
-		</section>
+			</section>
 
-		<!-- Contact -->
-		{% include "debug/theme-contact.html" %}
+			<!-- Contact -->
+			{% include "debug/theme-contact.html" %}
+		</main>
 
 		<!-- Footer -->
 		{% include "debug/theme-footer.html" %}
@@ -77,8 +83,8 @@
 		<script src="{% static 'assets/js/breakpoints.min.js' %}"></script>
 		<script src="{% static 'assets/js/util.js' %}"></script>
 		<script src="{% static 'assets/js/main.js' %}"></script>
-        {% block extra_js %}
-        {# Override this in templates to add extra javascript #}
-        {% endblock %}
+		{% block extra_js %}
+		{# Override this in templates to add extra javascript #}
+		{% endblock %}
 	</body>
 </html>
