--- a/templates/debug/theme-privacy.html
+++ b/templates/debug/theme-privacy.html
@@ -22,6 +22,7 @@
         <base target="_blank">
         {% endif %}
 
+        <link rel="stylesheet" type="text/css" href="{% static 'assets/css/fontawesome-all.min.css' %}" />
         <link rel="stylesheet" type="text/css" href="{% static 'assets/css/main.css' %}" />
 		<noscript>
 			<link rel="stylesheet" type="text/css" href="{% static 'assets/css/noscript.css' %}" />
@@ -44,9 +45,9 @@
 				<!-- Content Header -->
 				<header class="major">
 					<h2>Privacy Policy</h2>
-					<p class="metadata">
+					<div class="metadata">
 						<span class="icon solid fa-calendar-alt"></span><span class="date">Jan 1, 2024</span>
-					</p>
+					</div>
 				</header>
 
 				<!-- Content -->
