--- a/templates/debug/theme-promo.html
+++ b/templates/debug/theme-promo.html
@@ -1,15 +1,12 @@
 {% load static wagtailcore_tags %}
-<section id="one" class="wrapper major-pad">
-    <div class="inner">
-        <section class="spotlight">
-            <a href="#" class="image"><img src="{% static 'images/sample01-551x297.jpg'%}" alt="Title of promoted content" /></a>
-            <div class="content">
-                <a href="#"><h2>Title of promoted content</h2></a>
-                <p>This is the intro section of the promoted content. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin id interdum magna, ultricies aliquet curabitur sed metus pellentesque, ornare sapien quis.</p>
-                <ul class="actions">
-                    <li><a href="#" class="button">More</a></li>
-                </ul>
-            </div>
-        </section>
+<section class="spotlight">
+    <a href="#" class="image"><img src="{% static 'images/sample01-551x297.jpg'%}" alt="Title of promoted content" /></a>
+    <div class="content">
+        <h2><a href="#">Title of promoted content</a></h2>
+        <div class="metadata"><span class="icon solid fa-calendar-alt"></span><span class="date">{% now "M j, Y" %}</span></div>
+        <p>This is the intro section of the promoted content. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin id interdum magna, ultricies aliquet curabitur sed metus pellentesque, ornare sapien quis.</p>
+        <ul class="actions">
+            <li><a href="#" class="button">More</a></li>
+        </ul>
     </div>
 </section>
