--- a/templates/debug/theme-recent.html
+++ b/templates/debug/theme-recent.html
@@ -1,72 +1,70 @@
 {% load static wagtailcore_tags %}
-<section class="post">
-    <a href="#"class="image"><img src="{% static 'images/sample01-551x297.jpg'%}" alt="Lorem ipsum" /></a>
-    <div class="content list">
-        <a href="#"><h3>Congue portitor</h3></a>
-        <p>Aenean ultricies magna non sapien rhoncus, ac ullamcorper lorem convallis. Quisque at venenatis nisi, amet finibus mauris. Sed sodales ultricies eros, sit amet sodales sapien.</p>
-    </div>
-    <ul class="actions list">
-        <li><a href="#" class="button small">More</a></li>
-    </ul>
-</section>
-<section class="post">
-    <a href="#"><span class="image"><img src="{% static 'images/sample02-551x297.jpg'%}" alt="Lorem ipsum" /></span></a>
-    <div class="content list">
-        <a href="#"><h3>Duis nisl euismod</h3></a>
-        <p>Ultrices nec metus. Aenean ultricies magna et sapien rhoncus ac ullamcorper lorem convallis. Quisque at venenatis nisi amet finibus mauris. Sed sodales ultricies magna etiam.</p>
-    </div>
-    <ul class="actions list">
-        <li><a href="#" class="button small">More</a></li>
-    </ul>
-</section>
-<section class="post">
-    <a href="#"><span class="image"><img src="{% static 'images/sample03-551x297.jpg'%}" alt="Lorem ipsum" /></span></a>
-    <div class="content list">
-        <a href="#"><h3>Elementum auctor</h3></a>
-        <p>Quis interdum. Lorem quis lacus justo. Sed libero condimentum vehicula sem vel, mattis amet mauris. Nullam lacinia sit amet felis vel vestibulum. Morbi aliquam aenean.</p>
-    </div>
-    <ul class="actions list">
-        <li><a href="#" class="button small">More</a></li>
-    </ul>
-</section>
-<section class="post">
-    <a href="#"><span class="image"><img src="{% static 'images/sample04-551x297.jpg'%}" alt="Lorem ipsum" /></span></a>
-    <div class="content list">
-        <a href="#"><h3>Urna vel lacinia</h3></a>
-        <p>Integer vel tincidunt lacus. Nulla augue nunc, eleifend quis leo ac, maximus interdum tellus. Etiam at vestibulum felis, id efficitur risus. Praesent ac nulla ex. Duis elementum.</p>
-    </div>
-    <ul class="actions list">
-        <li><a href="#" class="button small">More</a></li>
-    </ul>
-</section>
-<section class="post">
-    <a href="#"><span class="image"><img src="{% static 'images/sample01-551x297.jpg'%}" alt="Lorem ipsum" /></span></a>
-    <div class="content list">
-        <a href="#"><h3>Neque et suscipit</h3></a>
-        <p>Libero condimentum, vehicula sem vel, mattis mauris. Nullam lacinia sit amet felis vel vestibulum. Morbi in aliquam est. Aenean dapibus porttitor nulla ultrices venenatis.</p>
-    </div>
-    <ul class="actions list">
-        <li><a href="#" class="button small">More</a></li>
-    </ul>
-</section>
-<section class="post">
-    <a href="#"><span class="image"><img src="{% static 'images/sample02-551x297.jpg'%}" alt="Lorem ipsum" /></span></a>
-    <div class="content list">
-        <a href="#"><h3>Vestibulum placerat</h3></a>
-        <p>Tristique tellus et ullamcorper. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent mauris risus, pellentesque eu leo non, tincidunt.</p>
-    </div>
-    <ul class="actions list">
-        <li><a href="#" class="button small">More</a></li>
-    </ul>
-</section>
-<ul class="pagination">
-    <li><span class="button disabled small">Prev</span></li>
-    <li><a href="#" class="page active">1</a></li>
-    <li><a href="#" class="page">2</a></li>
-    <li><a href="#" class="page">3</a></li>
-    <li><span>&hellip;</span></li>
-    <li><a href="#" class="page">8</a></li>
-    <li><a href="#" class="page">9</a></li>
-    <li><a href="#" class="page">10</a></li>
-    <li><a href="#" class="button small">Next</a></li>
-</ul>
+<div class="posts">
+    <section class="post">
+        <a href="#"class="image"><img src="{% static 'images/sample01-551x297.jpg'%}" alt="Lorem ipsum" /></a>
+        <div class="content list">
+            <h3><a href="#">Congue portitor</a></h3>
+            <div class="metadata"><span class="icon solid fa-calendar-alt"></span><span class="date">{% now "M j, Y" %}</span></div>
+            <p>Aenean ultricies magna non sapien rhoncus, ac ullamcorper lorem convallis. Quisque at venenatis nisi, amet finibus mauris. Sed sodales ultricies eros, sit amet sodales sapien.</p>
+        </div>
+        <ul class="actions list">
+            <li><a href="#" class="button small">More</a></li>
+        </ul>
+    </section>
+
+    <section class="post">
+        <a href="#"><span class="image"><img src="{% static 'images/sample02-551x297.jpg'%}" alt="Lorem ipsum" /></span></a>
+        <div class="content list">
+            <h3><a href="#">Duis nisl euismod</a></h3>
+            <div class="metadata"><span class="icon solid fa-calendar-alt"></span><span class="date">{% now "M j, Y" %}</span></div>
+            <p>Ultrices nec metus. Aenean ultricies magna et sapien rhoncus ac ullamcorper lorem convallis. Quisque at venenatis nisi amet finibus mauris. Sed sodales ultricies magna etiam.</p>
+        </div>
+        <ul class="actions list">
+            <li><a href="#" class="button small">More</a></li>
+        </ul>
+    </section>
+    <section class="post">
+        <a href="#"><span class="image"><img src="{% static 'images/sample03-551x297.jpg'%}" alt="Lorem ipsum" /></span></a>
+        <div class="content list">
+            <h3><a href="#">Elementum auctor</a></h3>
+            <div class="metadata"><span class="icon solid fa-calendar-alt"></span><span class="date">{% now "M j, Y" %}</span></div>
+            <p>Quis interdum. Lorem quis lacus justo. Sed libero condimentum vehicula sem vel, mattis amet mauris. Nullam lacinia sit amet felis vel vestibulum. Morbi aliquam aenean.</p>
+        </div>
+        <ul class="actions list">
+            <li><a href="#" class="button small">More</a></li>
+        </ul>
+    </section>
+    <section class="post">
+        <a href="#"><span class="image"><img src="{% static 'images/sample04-551x297.jpg'%}" alt="Lorem ipsum" /></span></a>
+        <div class="content list">
+            <h3><a href="#">Urna vel lacinia</a></h3>
+            <div class="metadata"><span class="icon solid fa-calendar-alt"></span><span class="date">{% now "M j, Y" %}</span></div>
+            <p>Integer vel tincidunt lacus. Nulla augue nunc, eleifend quis leo ac, maximus interdum tellus. Etiam at vestibulum felis, id efficitur risus. Praesent ac nulla ex. Duis elementum.</p>
+        </div>
+        <ul class="actions list">
+            <li><a href="#" class="button small">More</a></li>
+        </ul>
+    </section>
+    <section class="post">
+        <a href="#"><span class="image"><img src="{% static 'images/sample01-551x297.jpg'%}" alt="Lorem ipsum" /></span></a>
+        <div class="content list">
+            <h3><a href="#">Neque et suscipit</a></h3>
+            <div class="metadata"><span class="icon solid fa-calendar-alt"></span><span class="date">{% now "M j, Y" %}</span></div>
+            <p>Libero condimentum, vehicula sem vel, mattis mauris. Nullam lacinia sit amet felis vel vestibulum. Morbi in aliquam est. Aenean dapibus porttitor nulla ultrices venenatis.</p>
+        </div>
+        <ul class="actions list">
+            <li><a href="#" class="button small">More</a></li>
+        </ul>
+    </section>
+    <section class="post">
+        <a href="#"><span class="image"><img src="{% static 'images/sample02-551x297.jpg'%}" alt="Lorem ipsum" /></span></a>
+        <div class="content list">
+            <h3><a href="#">Vestibulum placerat</a></h3>
+            <div class="metadata"><span class="icon solid fa-calendar-alt"></span><span class="date">{% now "M j, Y" %}</span></div>
+            <p>Tristique tellus et ullamcorper. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent mauris risus, pellentesque eu leo non, tincidunt.</p>
+        </div>
+        <ul class="actions list">
+            <li><a href="#" class="button small">More</a></li>
+        </ul>
+    </section>
+</div>
