--- a/templates/debug/theme-show-page.html
+++ b/templates/debug/theme-show-page.html
@@ -22,6 +22,7 @@
         <base target="_blank">
         {% endif %}
 
+        <link rel="stylesheet" type="text/css" href="{% static 'assets/css/fontawesome-all.min.css' %}" />
         <link rel="stylesheet" type="text/css" href="{% static 'assets/css/main.css' %}" />
 		<noscript>
 			<link rel="stylesheet" type="text/css" href="{% static 'assets/css/noscript.css' %}" />
